Remove the orange override which is hard to read and correct the background on pre code tags

--- a/styles/main.less
+++ b/styles/main.less
@@ -84,9 +84,8 @@ footer {
 }
 
 code {
-  background-color : none;
+  background-color : inherit;
   border           : none;
-  color            : orange;
 }
 
 .buffered-name {
